<resources>
    <string name="app_name">VacationPlanner</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="place_types">
        <item>Activities</item>
        <item>Food and Drink</item>
        <item>Accommodation</item>
        <item>Transportation</item>
        <item>Other</item>
    </string-array>

    <string name="string_teal">#84DCCE</string>
    <string name="string_tealdark">#247F70</string>
    <string name="string_redlight">#FF686B</string>
    <string name="string_aquamarine">#A5FED6</string>
    <string name="string_melon">#FFA69E</string>
    <string name="string_wheat">#E9C386</string>

    <string name="save_pressed">saved</string>
    <string name="save_not_pressed">save</string>

    <string name="uninstall">Uninstall</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="things_to_do">Things to do</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="vacation_planner">Vacation Planner</string>
    <string name="calendar">Calendar</string>
    <string name="save">Save</string>
    <string name="note_title">Note Title</string>
    <string name="type_your_note_here">Type your note here...</string>
    <string name="delete_note">Delete Note</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="notifications">Notifications</string>
    <string name="no_new_notifications_check_back_later">No new notifications! Check back later.</string>
    <string name="edit_budget_goal">Edit Budget Goal</string>
    <string name="total_budget">Total Budget:</string>
    <string name="dollar_sign">$</string>
    <string name="done">Done</string>
    <string name="budget_planner">Budget Planner</string>
    <string name="budget_goal">Budget Goal:</string>
    <string name="no_chart_data_available_yet_add_costs_to_your_saved_locations_to_see_your_totals">No chart data available yet. Add costs to your saved locations to see your totals!</string>
    <string name="group_dashboard">Group Dashboard</string>
    <string name="edit_members_list"><![CDATA[Edit Members List >]]></string>
    <string name="no_members_yet_nclick_edit_members_list_to_add_new_members">No members yet!\nClick Edit Members List to add new members</string>
    <string name="initialize_your_trip_information_nclick_the_button_at_the_corner_to_edit">Initialize your trip information!\nClick the button at the corner to edit</string>
    <string name="upcoming_trip">Upcoming Trip</string>
    <string name="planning">Planning</string>
    <string name="logout">Logout</string>
    <string name="to_set_up_voting_select_4_places_nthen_press_done_to_start_vote">To set up voting select 4 places.\nThen press DONE to start vote</string>
    <string name="no_saved_places_yet_nsearch_the_map_to_add_new_locations">No saved places yet!\nSearch the map to add new locations.</string>
    <string name="clear_places_db">clear places db</string>
    <string name="total_cost_0_00">Total cost: $0.00</string>
    <string name="save_cost">Save cost</string>
    <string name="no_to_dos_yet_nclick_the_button_to_add_your_notes">No to dos yet!\nClick the + button to add your notes</string>
    <string name="place_name">Place name</string>
    <string name="voting_has_not_yet_started">Voting has not yet started</string>
    <string name="view_results">View results</string>
    <string name="hour">hour</string>
    <string name="cost">Cost</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="date_picker">date picker</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="add_to_calendar">add to calendar</string>
    <string name="event">Event</string>
    <string name="title_of_notification">Title of Notification</string>
    <string name="notification_description">Notification Description</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit_trip_details">Edit Trip Details</string>
    <string name="name_of_trip">Name of Trip</string>
    <string name="destination">Destination</string>
    <string name="start_day">Start Day</string>
    <string name="end_day">End Day</string>
    <string name="budget">Budget</string>
    <string name="group">Group</string>
    <string name="search">Search</string>
    <string name="pick_color">Pick Color</string>
</resources>