<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/money_icon"
        android:title="@string/budget" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/group_icon"
        android:title="@string/group" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_planning"
        android:icon="@drawable/planning_icon"
        android:title="@string/planning" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/mapsearch_icon"
        android:title="@string/search" />

</menu>