<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_note"
    android:backgroundTint="@color/wheat"
    android:padding="@dimen/_30dp">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="end"
        android:src="@drawable/x_icon"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/edit_trip_details"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black" />


    <EditText
        android:id="@+id/editTripName"
        android:background="@drawable/searchview_background"
        android:padding="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:hint="@string/name_of_trip"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/editTripDestination"
        android:background="@drawable/searchview_background"
        android:padding="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/destination"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:maxLines="1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/start_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/start_day"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/start_day_input"
            android:background="@drawable/searchview_background"
            android:padding="@dimen/_10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:hint="@string/mm_dd_yyyy"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:inputType="date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/end_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/end_day"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/end_day_input"
            android:background="@drawable/searchview_background"
            android:padding="@dimen/_10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="15sp"
            android:hint="@string/mm_dd_yyyy"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:inputType="date"/>

    </LinearLayout>


    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/done"
        android:textColor="@color/black"/>

</LinearLayout>