<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:padding="@dimen/_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_of_notification"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/notification_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/notification_description"
            android:maxLines="2"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <Button
            android:id="@+id/notificationDismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/melon"
            android:text="@string/dismiss"
            android:textColor="@color/white" />

    </FrameLayout>



</FrameLayout>